[package]
name = "cqhttp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.25"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
